<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="70dp"
    android:layout_height="70dp"
    android:paddingBottom="4dp"
    android:paddingLeft="15dp"
    android:paddingRight="4dp"
    android:paddingTop="18dp"
    tools:context="example.com.mpdlcamera.Settings.LocalAlbumSettingsActivity"
    android:id="@+id/toplayout"
    android:background="@layout/custom_border">


    <RadioGroup
        android:id="@+id/radioNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"


            android:id="@+id/radioOne"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifidata"
            android:id="@+id/radioTwo"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:id="@+id/radioThree"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RadioGroup>



    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/btn_done"
        android:layout_below="@+id/radioNetwork"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleX="0.8"
        android:scaleY="0.8"

        />

    <Button

        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancel"
        android:scaleX="0.8"
        android:scaleY="0.8"

        android:layout_marginLeft="90dp"
        android:layout_alignTop="@+id/btnDone"
         />

</RelativeLayout>
