<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.mpdlcamera.UploadActivity.UploadFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:gravity="left"
        android:id="@+id/netOption">

        <!--Upload Settings-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/auto_upload"
            android:textSize="20dip"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"/>
        </RelativeLayout>
        <!--divider-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#80808080" >
        </LinearLayout>


    </LinearLayout>


    <!--choose_collection-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/choose_collection"
            android:id="@+id/tv_choose_collection"
            android:textSize="20dip"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/collection_name"
            android:text=""
            android:textSize="15dp"

            />

    </RelativeLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocr"
        android:id="@+id/ocr"
        android:textSize="20dip"

        android:layout_below="@+id/lau"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ocr"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#80808080" >
    </LinearLayout>

    <!--divider-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#80808080" >
    </LinearLayout>

    <!--wifi options-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/option_wifi"
            android:id="@+id/tv_option_wifi"
            android:textSize="20dip"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_option_wifi"
            android:text="@string/option_cellular"
            android:id="@+id/tv_option_cellular"
            android:textSize="20dip"
            android:textColor="@color/black" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_wifi"
            android:layout_marginRight="30dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_cellular"
            android:layout_below="@id/radioButton_wifi"
            android:layout_marginRight="30dp"/>
        </RadioGroup>

    </RelativeLayout>


</LinearLayout>
